RESOLVED FIXED211197
REGRESSION (r246395): Leak of ARQuickLookPreviewItem and ARQuickLookWebKitItem in -[_WKPreviewControllerDataSource previewController:previewItemAtIndex:]
https://bugs.webkit.org/show_bug.cgi?id=211197
Summary REGRESSION (r246395): Leak of ARQuickLookPreviewItem and ARQuickLookWebKitIte...
David Kilzer (:ddkilzer)
Reported 2020-04-29 12:20:08 PDT
Leak of ARQuickLookPreviewItem and ARQuickLookWebKitItem in -[_WKPreviewControllerDataSource previewController:previewItemAtIndex:]. Regressed in r246395 for Bug 198812.
Attachments
Patch v1 (2.28 KB, patch)
2020-04-29 12:24 PDT, David Kilzer (:ddkilzer)
no flags
Patch v2 (2.34 KB, patch)
2020-04-29 12:36 PDT, David Kilzer (:ddkilzer)
no flags
Patch for landing (2.33 KB, patch)
2020-04-29 15:10 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-29 12:20:23 PDT
David Kilzer (:ddkilzer)
Comment 2 2020-04-29 12:24:28 PDT
Created attachment 397985 [details] Patch v1
David Kilzer (:ddkilzer)
Comment 3 2020-04-29 12:36:53 PDT
Created attachment 397988 [details] Patch v2
David Kilzer (:ddkilzer)
Comment 4 2020-04-29 12:37:22 PDT
(In reply to David Kilzer (:ddkilzer) from comment #3) > Created attachment 397988 [details] > Patch v2 Fixed build error: - previewItem.canonicalWebPageURL = _originatingPageURL; + previewItem.get().canonicalWebPageURL = _originatingPageURL;
Darin Adler
Comment 5 2020-04-29 13:49:05 PDT
Comment on attachment 397988 [details] Patch v2 View in context: https://bugs.webkit.org/attachment.cgi?id=397988&action=review > Source/WebKit/UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:113 > + previewItem.get().canonicalWebPageURL = _originatingPageURL; Some WebKit contributors prefer this style to sidestep the get(): [previewItem setCanonicalWebPageURL:_originatingPageURL];
David Kilzer (:ddkilzer)
Comment 6 2020-04-29 13:50:33 PDT
Comment on attachment 397988 [details] Patch v2 View in context: https://bugs.webkit.org/attachment.cgi?id=397988&action=review >> Source/WebKit/UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:113 >> + previewItem.get().canonicalWebPageURL = _originatingPageURL; > > Some WebKit contributors prefer this style to sidestep the get(): > > [previewItem setCanonicalWebPageURL:_originatingPageURL]; Wasn't sure if new-style Objective-C setters (with .get()) were preferred over old-style setter syntax (but no .get()).
Darin Adler
Comment 7 2020-04-29 14:06:49 PDT
Comment on attachment 397988 [details] Patch v2 View in context: https://bugs.webkit.org/attachment.cgi?id=397988&action=review >>> Source/WebKit/UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:113 >>> + previewItem.get().canonicalWebPageURL = _originatingPageURL; >> >> Some WebKit contributors prefer this style to sidestep the get(): >> >> [previewItem setCanonicalWebPageURL:_originatingPageURL]; > > Wasn't sure if new-style Objective-C setters (with .get()) were preferred over old-style setter syntax (but no .get()). Tim Horton was the one who explained the lack of Objective-C setters in another patch, by citing this.
David Kilzer (:ddkilzer)
Comment 8 2020-04-29 15:10:05 PDT
Created attachment 397999 [details] Patch for landing
David Kilzer (:ddkilzer)
Comment 9 2020-04-29 16:04:41 PDT
Comment on attachment 397999 [details] Patch for landing Marking cq+ because "Patch v2" has passed all tests except one ios-wk2 test (fast/text/text-indent-inside-float.html) which this patch is not likely to have affected.
EWS
Comment 10 2020-04-29 16:08:06 PDT
Committed r260922: <https://trac.webkit.org/changeset/260922> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397999 [details].
Note You need to log in before you can comment on or make changes to this bug.