REGRESSION (r246395): Leak of ARQuickLookPreviewItem and ARQuickLookWebKitItem in -[_WKPreviewControllerDataSource previewController:previewItemAtIndex:] <https://webkit.org/b/211197> <rdar://problem/62612483>

Reviewed by Darin Adler.

* UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:
(-[_WKPreviewControllerDataSource previewController:previewItemAtIndex:]):
- Use RetainPtr<> and adoptNS() to fix leaks.


Canonical link: https://commits.webkit.org/224111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260922 268f45cc-cd09-0410-ab3c-d52691b4dbfc